<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CartFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextAppearance="@style/AppbarTitle2"
                app:contentScrim="@color/drawer_icon_color"
                app:expandedTitleMarginStart="16dp"
                app:expandedTitleTextAppearance="@style/AppbarTitle1"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:title="@string/label_cart">


                <ImageView
                    android:id="@+id/image_expanded"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:contentInsetStartWithNavigation="0dp"
                    android:backgroundTint="@color/purple_200"
                    app:layout_collapseMode="pin">

                </com.google.android.material.appbar.MaterialToolbar>


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/layout_cart_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:visibility="visible">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f2f2f2"
                app:layout_constraintBottom_toTopOf="@+id/recycler_food_items"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cart_shop_name" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_food_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:background="@color/background_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cart_shop_name"
                tools:itemCount="3"
                tools:listitem="@layout/item_cart_product" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f2f2f2" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <RadioGroup
                    android:id="@+id/takeOutMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_pickup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:checked="true"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/label_pickup" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_delivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/label_delivery" />
                </RadioGroup>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:orientation="horizontal"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/takeOutMethod"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/ruppee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:fontFamily="@font/open_sans_semibold"
                        android:gravity="end"
                        android:minWidth="45dp"
                        android:text="₹"
                        android:textColor="@color/titleColor"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_delivery_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/open_sans_semibold"
                        android:gravity="center"
                        android:minWidth="10dp"
                        android:text="0"
                        android:textColor="@color/titleColor"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f2f2f2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/background_color"
                android:padding="16dp">


                <ImageView
                    android:id="@+id/image_info"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_info"
                    app:tint="@color/colorAccent" />


                <TextView
                    android:id="@+id/text_food_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_bold"
                    android:gravity="center|start"
                    android:text="@string/label_to_pay"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <include
                    android:id="@+id/layoutQuantityControl"
                    layout="@layout/inc_dec_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/ruppee2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/open_sans_bold"
                    android:gravity="center|end"
                    android:minWidth="60dp"
                    android:text="₹"
                    android:textColor="@color/colorAccent"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/open_sans_bold"
                    android:gravity="center|end"
                    android:text="0"
                    android:minWidth="10dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="14dp"
                    android:textStyle="bold" />

            </LinearLayout>


            <TextView
                android:id="@+id/text_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/background_color"
                android:drawablePadding="16dp"
                android:fontFamily="@font/open_sans_semibold"
                android:gravity="center|start"
                android:hint="Any information to convey?"
                android:padding="16dp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_note" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EAEAEA" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorAccentLight1"
        app:layout_anchor="@+id/app_bar"
        app:layout_anchorGravity="center" />
        Cart title ke upar aata hai yeh-->

    <LinearLayout
        android:id="@+id/layout_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_cart_empty" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/label_no_items_in_cart" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
android:background="@drawable/button_bg"
        android:id="@+id/button_confirm_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Next"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/colorAccent"
        android:visibility="gone"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
